s4:ntvfs/common/brlock.c - remove unnecessary include "tdb_compat.h"

Attempt to fix bug #8468
(https://bugzilla.samba.org/show_bug.cgi?id=8468).

Reviewed-by: Jelmer

Autobuild-User: Matthias Dieter Wallnöfer <mdw@samba.org>
Autobuild-Date: Mon Sep 19 18:03:24 CEST 2011 on sn-devel-104